--- a/index.html
+++ b/index.html
@@ -36,251 +36,252 @@
       </div>
     </section>
 
-    <section>
-      <h2>QUIÉNES SOMOS</h2>
+    <main>
+      <section>
+        <h2>QUIÉNES SOMOS</h2>
 
-      <div>
         <div>
-          <img
-            loading="lazy"
-            src="./images/buffet-section.jpg"
-            alt=""
-            width="500"
-            height="300"
-          />
-        </div>
-        <div>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex,
-            voluptas quidem. Mollitia quia assumenda commodi, blanditiis maiores
-            quos? Fuga quisquam officia libero odio natus laudantium nam unde
-            veritatis hic quae!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-            architecto magni officia perferendis dolor eum nam, nemo repellat
-            facilis.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
-            repudiandae dolorem nemo aut aliquam nam, vel ipsam consectetur
-            animi, modi sapiente
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <!--La imagen se agrega con CSS para que quede como fondo y el texto pueda ir encima de la imagen-->
-      <p>
-        Proveemos soluciones premium de catering para eventos formales o
-        casuales
-      </p>
-    </section>
-
-    <section>
-      <h2>Nuestros servicios</h2>
-
-      <div>
-        <article>
           <div>
             <img
               loading="lazy"
-              src="./images/wedding.jpg"
+              src="./images/buffet-section.jpg"
               alt=""
               width="500"
               height="300"
             />
           </div>
-          <footer>
+          <div>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex,
+              voluptas quidem. Mollitia quia assumenda commodi, blanditiis
+              maiores quos? Fuga quisquam officia libero odio natus laudantium
+              nam unde veritatis hic quae!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+              architecto magni officia perferendis dolor eum nam, nemo repellat
+              facilis.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+              repudiandae dolorem nemo aut aliquam nam, vel ipsam consectetur
+              animi, modi sapiente
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <!--La imagen se agrega con CSS para que quede como fondo y el texto pueda ir encima de la imagen-->
+        <p>
+          Proveemos soluciones premium de catering para eventos formales o
+          casuales
+        </p>
+      </section>
+
+      <section>
+        <h2>Nuestros servicios</h2>
+
+        <div>
+          <article>
+            <div>
+              <img
+                loading="lazy"
+                src="./images/wedding.jpg"
+                alt=""
+                width="500"
+                height="300"
+              />
+            </div>
+
             <p>Bodas</p>
-          </footer>
-        </article>
-        <article>
-          <div>
-            <img
-              loading="lazy"
-              src="./images/woman-flowers-holidays-girl.jpg"
-              alt=""
-              width="500"
-              height="300"
-            />
-          </div>
-          <footer>
+          </article>
+          <article>
+            <div>
+              <img
+                loading="lazy"
+                src="./images/woman-flowers-holidays-girl.jpg"
+                alt=""
+                width="500"
+                height="300"
+              />
+            </div>
+
             <p>Eventos corporativos</p>
-          </footer>
-        </article>
-        <article>
-          <div>
-            <img
-              loading="lazy"
-              src="./images/hands-summer-party-colorful.jpg"
-              alt=""
-              width="500"
-              height="300"
-            />
-          </div>
-          <footer>
+          </article>
+          <article>
+            <div>
+              <img
+                loading="lazy"
+                src="./images/hands-summer-party-colorful.jpg"
+                alt=""
+                width="500"
+                height="300"
+              />
+            </div>
+
             <p>Reuniones familiares</p>
-          </footer>
-        </article>
-      </div>
-    </section>
+          </article>
+        </div>
+      </section>
 
-    <section>
-      <h2>Nuestros servicios</h2>
-      <p>Contamos con paquetes personalizados a la medida de tus necesidades</p>
+      <section>
+        <h2>Paquetes de catering</h2>
+        <p>
+          Contamos con paquetes personalizados a la medida de tus necesidades
+        </p>
 
-      <div>
-        <article>
-          <header>
-            <h3>Silver</h3>
-          </header>
-          <p>$15.99 / persona</p>
-          <ul>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>-</li>
-            <li>-</li>
-            <li>-</li>
-            <li>-</li>
-          </ul>
-        </article>
+        <div>
+          <article>
+            <header>
+              <h3>Silver</h3>
+            </header>
+            <p>$15.99 / persona</p>
+            <ul>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>-</li>
+              <li>-</li>
+              <li>-</li>
+              <li>-</li>
+            </ul>
+          </article>
 
-        <article>
-          <header>
-            <h3>Gold</h3>
-          </header>
-          <p>$19.99 / persona</p>
-          <ul>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>-</li>
-            <li>-</li>
-          </ul>
-        </article>
+          <article>
+            <header>
+              <h3>Gold</h3>
+            </header>
+            <p>$19.99 / persona</p>
+            <ul>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>-</li>
+              <li>-</li>
+            </ul>
+          </article>
 
-        <article>
-          <header>
-            <h3>Platinum</h3>
-          </header>
-          <p>$29.99 / persona</p>
-          <ul>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i>
-              Lorem ipsum dolor sit amet
-            </li>
-          </ul>
-        </article>
-      </div>
-    </section>
-
-    <section>
-      <h2>Contacto</h2>
-      <p>Dirección: Broadway & Morris St, New York , NY 10006</p>
-      <p>Teléfono: 1-234-567-8910</p>
-      <p>Email : info@gmail.com</p>
-      <div>
-        <form action="">
-          <div>
-            <label for="nombre">Nombre:</label>
-            <input type="text" autocomplete="off" />
-          </div>
-          <div>
-            <label for="nombre">Teléfono:</label>
-            <input type="tel" autocomplete="off" />
-          </div>
-          <div>
-            <label for="nombre">Email:</label>
-            <input type="email" autocomplete="off" />
-          </div>
-          <div>
-            <label>Escribe un comentario</label>
-            <textarea cols="30" rows="10"></textarea>
-          </div>
-
-          <input type="submit" value="Enviar" />
-        </form>
-      </div>
-    </section>
-
-    <section>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.550808793259!2d-74.01586612416415!3d40.705889537990025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1145b1ab8b%3A0xaedc8d7989eecbc0!2sBroadway%20%26%20Morris%20St%2C%20New%20York%2C%20NY%2010006%2C%20EE.%20UU.!5e0!3m2!1ses-419!2spe!4v1691517659235!5m2!1ses-419!2spe"
-        width="100%"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-    </section>
+          <article>
+            <header>
+              <h3>Platinum</h3>
+            </header>
+            <p>$29.99 / persona</p>
+            <ul>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+                Lorem ipsum dolor sit amet
+              </li>
+            </ul>
+          </article>
+        </div>
+      </section>
+    </main>
 
     <footer>
+      <section>
+        <h2>Contacto</h2>
+        <p>Dirección: Broadway & Morris St, New York , NY 10006</p>
+        <p>Teléfono: 1-234-567-8910</p>
+        <p>Email : info@gmail.com</p>
+        <div>
+          <form action="">
+            <div>
+              <label for="nombre">Nombre:</label>
+              <input type="text" autocomplete="off" />
+            </div>
+            <div>
+              <label for="nombre">Teléfono:</label>
+              <input type="tel" autocomplete="off" />
+            </div>
+            <div>
+              <label for="nombre">Email:</label>
+              <input type="email" autocomplete="off" />
+            </div>
+            <div>
+              <label>Escribe un comentario</label>
+              <textarea cols="30" rows="10"></textarea>
+            </div>
+
+            <input type="submit" value="Enviar" />
+          </form>
+        </div>
+      </section>
+
+      <section>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.550808793259!2d-74.01586612416415!3d40.705889537990025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1145b1ab8b%3A0xaedc8d7989eecbc0!2sBroadway%20%26%20Morris%20St%2C%20New%20York%2C%20NY%2010006%2C%20EE.%20UU.!5e0!3m2!1ses-419!2spe!4v1691517659235!5m2!1ses-419!2spe"
+          width="100%"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
+
       <div>
         <div>
           <i class="fa-brands fa-square-facebook"></i>
